--- a/TDDSample/Base.lproj/Main.storyboard
+++ b/TDDSample/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="977" y="115"/>
+            <point key="canvasLocation" x="712" y="115"/>
         </scene>
         <!--Memo View Controller-->
         <scene sceneID="eeJ-s4-UWC">
@@ -104,10 +104,10 @@
             </objects>
             <point key="canvasLocation" x="1730" y="115"/>
         </scene>
-        <!--Navigation-->
+        <!--Main Container-->
         <scene sceneID="vcV-co-ipe">
             <objects>
-                <navigationController storyboardIdentifier="Navigation" automaticallyAdjustsScrollViewInsets="NO" id="JnE-AL-CHc" customClass="Navigation" customModule="TDDSample" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainContainer" automaticallyAdjustsScrollViewInsets="NO" id="JnE-AL-CHc" customClass="MainContainer" customModule="TDDSample" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="NfZ-Ep-Uu0">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -117,7 +117,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BLD-4T-CCe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="114.50892857142857"/>
+            <point key="canvasLocation" x="-254" y="115"/>
         </scene>
     </scenes>
     <resources>
